<resources>
    <string name="txt_group_name">পিংনা, সরিষাবাড়ী, জামালপুর</string>

    <!-- Toast -->
    <string name="toast_ignored_fast_click">Ignored fast click!</string>

    <!-- Progress Dialog -->
    <string name="progress_dialog_loading">Loading...</string>

    <string name="txt_attributes">Attributes</string>
    <string name="txt_color">Color</string>
    <string name="txt_background">Background</string>
    <string name="txt_shadow">Shadow</string>
    <string name="txt_text">Text</string>
    <string name="txt_input_text">Input Text</string>
    <string name="txt_watermark">Water Mark</string>
    <string name="txt_stamp">Stamp</string>
</resources>