<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_oval_border_black"
            android:padding="1dp">

            <ImageView
                android:id="@+id/iv_attribute_background"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/bg_oval_white" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_shadow"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekbar_attribute_shadow"
            style="@style/DiscreteSeekBar"
            app:dsb_max="255"
            app:dsb_min="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_attribute_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:hint="@string/txt_input_text" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_watermark"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_attribute_watermark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:checked="true"
            android:enabled="false" />

    </RelativeLayout>

</LinearLayout>